--- a/ai-backend/package.json
+++ b/ai-backend/package.json
@@ -27,6 +27,7 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.9.0",
     "mongoose": "^8.0.1",
     "node-cron": "^3.0.3",
     "stripe": "^14.5.0"
