--- a/ai-backend/package.json
+++ b/ai-backend/package.json
@@ -29,8 +29,10 @@
     "jsonwebtoken": "^9.0.2",
     "mailgun-js": "^0.22.0",
     "mongodb": "^6.9.0",
-    "mongoose": "^8.0.1",
     "node-cron": "^3.0.3",
+    "pg": "^8.13.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.4",
     "stripe": "^14.5.0"
   },
   "devDependencies": {
