--- a/ai-backend/package.json
+++ b/ai-backend/package.json
@@ -19,18 +19,20 @@
   },
   "homepage": "https://github.com/tweneboah/masync-mern-ai-backend#readme",
   "dependencies": {
-    "axios": "^1.6.2",
+    "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
+    "cheerio": "^1.0.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.18.2",
+    "express": "^4.21.1",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
     "mailgun-js": "^0.22.0",
     "node-cron": "^3.0.3",
     "pg": "^8.13.0",
     "pg-hstore": "^2.3.4",
+    "puppeteer": "^23.5.3",
     "sequelize": "^6.37.4",
     "stripe": "^14.5.0"
   },
