--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@ coverage
 .env.local
 .env.development.local
 .env.test.local
-.env.production.local
+.env.production
 
 npm-debug.log*
 yarn-debug.log*
