--- a/ai-backend/package.json
+++ b/ai-backend/package.json
@@ -24,6 +24,7 @@
     "cheerio": "^1.0.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
@@ -32,7 +33,7 @@
     "openai": "^4.68.0",
     "pg": "^8.13.0",
     "pg-hstore": "^2.3.4",
-    "puppeteer": "^23.5.3",
+    "playwright": "^1.49.0",
     "sequelize": "^6.37.4",
     "stripe": "^14.5.0"
   },
