--- a/ai-backend/package.json
+++ b/ai-backend/package.json
@@ -30,6 +30,7 @@
     "jsonwebtoken": "^9.0.2",
     "mailgun-js": "^0.22.0",
     "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.16",
     "openai": "^4.68.0",
     "pg": "^8.13.0",
     "pg-hstore": "^2.3.4",
