--- a/ai-frontend/public/manifest.json
+++ b/ai-frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "AI AltText Generator",
+  "name": "AI AltText Generator",
   "icons": [
     {
       "src": "favicon.ico",
