--- a/ai-backend/package.json
+++ b/ai-backend/package.json
@@ -29,6 +29,7 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
     "mailgun-js": "^0.22.0",
+    "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.16",
     "openai": "^4.68.0",
