--- a/ai-backend/package.json
+++ b/ai-backend/package.json
@@ -24,6 +24,7 @@
     "cheerio": "^1.0.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dodopayments": "^0.12.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-async-handler": "^1.2.0",
