--- a/ai-frontend/package.json
+++ b/ai-frontend/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "formik": "^2.4.5",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
@@ -52,5 +53,4 @@
   "devDependencies": {
     "tailwindcss": "^3.3.5"
   }
-
 }
