--- a/ai-frontend/package.json
+++ b/ai-frontend/package.json
@@ -19,6 +19,7 @@
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.5.1",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.27.0",
     "react-scripts": "^5.0.1",
