--- a/ai-backend/package.json
+++ b/ai-backend/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
+    "bull": "^4.16.5",
     "cheerio": "^1.0.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -28,6 +29,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-async-handler": "^1.2.0",
+    "ioredis": "^5.4.2",
     "jsonwebtoken": "^9.0.2",
     "mailgun-js": "^0.22.0",
     "multer": "^1.4.5-lts.1",
