--- a/ai-frontend/package.json
+++ b/ai-frontend/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.27.0",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^11.0.2",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5",
     "yup": "^1.3.2"
