--- a/ai-backend/package.json
+++ b/ai-backend/package.json
@@ -40,6 +40,7 @@
     "pg-hstore": "^2.3.4",
     "playwright": "^1.49.0",
     "sequelize": "^6.37.4",
+    "ssh2-sftp-client": "^11.0.0",
     "stripe": "^14.5.0"
   },
   "devDependencies": {
