--- a/ai-frontend/package.json
+++ b/ai-frontend/package.json
@@ -30,9 +30,10 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "npm run generate-sitemap && react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "generate-sitemap": "node generateSitemap.js"
   },
   "eslintConfig": {
     "extends": [
@@ -53,6 +54,8 @@
     ]
   },
   "devDependencies": {
+    "dotenv": "^16.4.7",
+    "sitemap": "^8.0.0",
     "tailwindcss": "^3.3.5"
   }
 }
