--- a/ai-backend/package.json
+++ b/ai-backend/package.json
@@ -29,6 +29,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-async-handler": "^1.2.0",
+    "fluent-ffmpeg": "^2.1.3",
     "ioredis": "^5.4.2",
     "jsonwebtoken": "^9.0.2",
     "mailgun-js": "^0.22.0",
@@ -44,7 +45,7 @@
     "stripe": "^14.5.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.1.9"
   },
   "sharp": {
     "use": "wasm"
