--- a/ai-frontend/package.json
+++ b/ai-frontend/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.7",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
+    "fluent-ffmpeg": "^2.1.2",
     "formik": "^2.4.5",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
@@ -24,6 +25,7 @@
     "react-router-dom": "^6.27.0",
     "react-scripts": "^5.0.1",
     "react-toastify": "^11.0.2",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5",
     "yup": "^1.3.2"
