--- a/ai-backend/package.json
+++ b/ai-backend/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/tweneboah/masync-mern-ai-backend#readme",
   "dependencies": {
+    "@runware/sdk-js": "^1.1.38",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "bull": "^4.16.5",
