Image to Viral Content

--- a/ai-frontend/public/manifest.json
+++ b/ai-frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "AI Image to Text Generator",
-  "name": "AI Image to Text Generator",
+  "short_name": "Images to Viral Content",
+  "name": "Images to Viral Content",
   "icons": [
     {
       "src": "favicon.ico",
